samples/_failures_safe/1761691403_2c8c03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b678ace6.c: In function ‘parser_init’:
./samples/SAFE/__tmp_b678ace6.c:152:29: error: incompatible types when assigning to type ‘struct Token’ from type ‘struct Token (*)(struct Lexer *)’
  152 |     parser->current_token = lexer_next_token
      |                             ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b678ace6.c:152:45: error: expected ‘;’ at end of input
  152 |     parser->current_token = lexer_next_token
      |                                             ^
      |                                             ;
./samples/SAFE/__tmp_b678ace6.c:152:5: error: expected declaration or statement at end of input
  152 |     parser->current_token = lexer_next_token
      |     ^~~~~~
